--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-
+.white{
+  background-color: white;
+}
+.blue{
+  background-color: blue;
+}
+.textwhite{
+  color: white;
+}
+.textcenter{
+  text-align: center;
+}
+section{
+  padding: 100px 0;
+}
+.fnt16{
+  font-size: 16px;
+}
 
 
 /* header */
@@ -9,15 +26,32 @@
   border-radius: 5px;
   margin-right: 5px;
 }
-.navbar .container{
-  margin: 0;
-  width: 100vw;
-  padding: 0 20px;
-}
 .navbar{
   margin-bottom: 0;
 }
 .navbar-header img{
   height: 40px;
   margin-right: 30px;
+}
+
+
+
+/* blue */
+.col-lg-6 h1{
+  font-size: 60px;
+  font-weight: bold;
+}
+.contact input, .contact button{
+  display: block;
+  margin: 20px auto;
+  width: 250px;
+  padding: 5px;
+  border-radius: 1px;
+}
+.radius{
+  border-radius: 10px;
+  padding: 50px;
+}
+.btngreen{
+  background-color: green;
 }
