--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+@media screen and (max-width:768px) {
+  header nav:first-child{
+    display: none;
+  }
+  section{
+    padding: 30px 0;
+  }
+}
+@media screen and (min-width:992px) {
+  section{
+   padding: 100px 0;
+ }
+ [class^="col-"]{
+   padding: 0;
+   margin: 0;
+ }
+}
+
+
 .white{
   background-color: white;
 }
@@ -27,18 +46,24 @@
 .textazure{
   color: #81ecec;
 }
-
-
-section{
-  padding: 100px 0;
+header{
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
+
+
 .fnt16{
   font-size: 16px;
 }
 .bold{
   font-weight: bold;
 }
-
+.centervert{
+  position: relative;
+  top: 100px;
+  transform: translateY(-50%);
+}
 
 /* header */
 .navbar-brand span{
@@ -59,9 +84,12 @@ section{
 
 
 /* azure */
-.col-lg-6 h1{
-  font-size: 60px;
+.postheader{
+  position: relative;
+  top: 100px;
+  left: 0;
 }
+
 .contact input, .contact button{
   display: block;
   margin: 20px auto;
