--- a/style.css
+++ b/style.css
@@ -5,14 +5,46 @@
   section{
     padding: 30px 0;
   }
+  .contact input, .contact button{
+    width: 150px;
+  }
+  .icons li img{
+    height: 70px;
+    padding: 0;
+  }
+  ul{
+    padding: 0;
+  }
 }
+
+
 @media screen and (min-width:992px) {
   section{
    padding: 100px 0;
  }
+ .fnt16{
+   font-size: 16px;
+ }
+ .centervert{
+   position: relative;
+   top: 100px;
+   transform: translateY(-50%);
+ }
  [class^="col-"]{
    padding: 0;
    margin: 0;
+ }
+ .postheader{
+   position: relative;
+   top: 100px;
+   left: 0;
+ }
+ .contact input, .contact button{
+   width: 250px;
+ }
+ .icons li img{
+   height: 60px;
+   padding: 0 30px;
  }
 }
 
@@ -30,7 +62,6 @@
   background-image: url("sfondo.jpg");
   background-size: cover;
 }
-
 .textwhite{
   color: white;
 }
@@ -51,19 +82,10 @@ header{
   z-index: 1;
   width: 100%;
 }
-
-
-.fnt16{
-  font-size: 16px;
-}
 .bold{
   font-weight: bold;
 }
-.centervert{
-  position: relative;
-  top: 100px;
-  transform: translateY(-50%);
-}
+
 
 /* header */
 .navbar-brand span{
@@ -84,18 +106,11 @@ header{
 
 
 /* azure */
-.postheader{
-  position: relative;
-  top: 100px;
-  left: 0;
-}
-
 .contact input, .contact button{
   display: block;
-  margin: 20px auto;
-  width: 250px;
-  padding: 5px;
   border-radius: 1px;
+  margin: 20px auto;
+  padding: 5px;
 }
 .radius{
   border-radius: 10px;
@@ -111,12 +126,9 @@ small span{
 
 /* Grey */
 .icons li{
-  padding: 0 30px;
   display: inline-block;
 }
-.icons li img{
-  height: 60px;
-}
+
 
 
 /* white */
