--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     display: none;
   }
   section{
-    padding: 30px 0;
+    padding: 50px 0;
+  }
+  .postheader .col-xs-10{
+    margin-top: 10px;
   }
   .contact input, .contact button{
     width: 150px;
@@ -18,9 +21,31 @@
 }
 
 
-@media screen and (min-width:992px) {
+@media screen and (min-width:768px) and (max-width:992px) {
+  header nav:first-child{
+    display: none;
+  }
+  .postheader{
+    padding: 90px 0;
+  }
   section{
-   padding: 100px 0;
+    padding: 50px 0;
+  }
+  .contact input, .contact button{
+    width: 200px;
+  }
+  .icons li img{
+    height: 60px;
+    padding: 0;
+  }
+  [class^="col-"]{
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width:1200px) {
+  section{
+   padding: 80px 0;
  }
  .fnt16{
    font-size: 16px;
@@ -73,6 +98,9 @@
 }
 .textcenter{
   text-align: center;
+}
+.textright{
+  text-align: right;
 }
 .textazure{
   color: #81ecec;
