--- a/style.css
+++ b/style.css
@@ -43,6 +43,23 @@
   }
 }
 
+
+
+@media screen and (min-width:992px) and (max-width:1200px) {
+  header nav:first-child{
+    display: none;
+  }
+  section{
+    padding: 30px 0;
+  }
+  .postheader{
+    padding: 90px 0;
+  }
+  .icons li img{
+    height:60px;
+  }
+}
+
 @media screen and (min-width:1200px) {
   section{
    padding: 80px 0;
@@ -54,10 +71,6 @@
    position: relative;
    top: 100px;
    transform: translateY(-50%);
- }
- [class^="col-"]{
-   padding: 0;
-   margin: 0;
  }
  .postheader{
    position: relative;
